--- a/artifacts/properties/showcase/quartz.properties
+++ b/artifacts/properties/showcase/quartz.properties
@@ -1,14 +1,16 @@
- org.quartz.scheduler.instanceName=MotechScheduler
- org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
- org.quartz.threadPool.threadCount=10
+ #MySql Job dataStore for Quartz
 
- org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
- org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
- org.quartz.jobStore.dataSource=motechDS
- org.quartz.jobStore.tablePrefix=QRTZ_
+ org.quartz.scheduler.instanceName = MotechScheduler
+ org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
+ org.quartz.threadPool.threadCount = 10
 
- org.quartz.dataSource.motechDS.driver=com.mysql.jdbc.Driver
- org.quartz.dataSource.motechDS.URL=jdbc:mysql://localhost:3306/motechquartz
- org.quartz.dataSource.motechDS.user=root
- org.quartz.dataSource.motechDS.password=password
- org.quartz.dataSource.motechDS.maxConnections=30
+ org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
+ org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+ org.quartz.jobStore.dataSource = motechDS
+ org.quartz.jobStore.tablePrefix = QRTZ_
+
+ org.quartz.dataSource.motechDS.driver = com.mysql.jdbc.Driver
+ org.quartz.dataSource.motechDS.URL = jdbc:mysql://localhost:3306/motechquartz
+ org.quartz.dataSource.motechDS.user = root
+ org.quartz.dataSource.motechDS.password = password
+ org.quartz.dataSource.motechDS.maxConnections = 30
