--- a/build.xml
+++ b/build.xml
@@ -279,7 +279,7 @@
         <java fork="false" classname="${couchdb.seed.main.class}">
             <classpath>
                 <path location="${tomcat.home}/webapps/${app.name}/WEB-INF/classes"/>
-                <path location="${download.dir}"/>
+                <path location="${download.dir}/tools"/>
                 <path refid="lib.path"/>
             </classpath>
         </java>
@@ -289,7 +289,7 @@
     <target name="download.tools.jar">
         <get dest="${download.dir}/${ghana.national.tools.name}.jar"
              src="${ghana.national.tools.url}"/>
-        <unzip dest="${download.dir}">
+        <unzip dest="${download.dir}/tools">
             <fileset dir="${download.dir}">
                 <include name="${ghana.national.tools.name}.jar"/>
             </fileset>
@@ -314,7 +314,7 @@
         <java fork="false" classname="${audio.loading.main.class}">
             <classpath>
                 <path location="${tomcat.home}/webapps/${app.name}/WEB-INF/classes"/>
-                <path location="${download.dir}"/>
+                <path location="${download.dir}/tools"/>
                 <path refid="lib.path"/>
             </classpath>
         </java>
@@ -344,7 +344,7 @@
             <classpath>
                 <path location="${tomcat.home}/webapps/${app.name}/WEB-INF/classes"/>
                 <path refid="lib.path"/>
-                <path location="${download.dir}"/>
+                <path location="${download.dir}/tools"/>
             </classpath>
         </java>
         <echo message="Schedule data loaded into ${couchdb.national.db} database"/>
