--- a/artifacts/mysql-replication/slave.properties
+++ b/artifacts/mysql-replication/slave.properties
@@ -1,6 +1,6 @@
-susername=repl
+susername=root
 spassword=password
-shost=192.168.42.117
-log_file=mysql-bin.000029
-log_pos=689
+shost=192.168.34.117
+log_file=mysql-bin.000009
+log_pos=2075
 slaveServerId=101
