Arvind | Updated batch properties

--- a/artifacts/properties/qa/delivery/batch-default.properties
+++ b/artifacts/properties/qa/delivery/batch-default.properties
@@ -16,3 +16,10 @@ ant.file=/home/motech/apache-ant-1.8.2/bin/ant
 environment=prod
 # Non-platform dependent settings that you might like to change
 # batch.data.source.init=true
+
+batch.replication.cron=0 20 5 * * ?
+batch.indexing.cron=0 */15 * * * ?
+batch.compaction.cron=0 0 0 * * ?
+
+couchdb.master.host=localhost
+couchdb.slave.host=localhost
