<aus> | updated with some fixes for prod versions

--- a/artifacts/nagios/etc/nagios/objects/remote-host.cfg
+++ b/artifacts/nagios/etc/nagios/objects/remote-host.cfg
@@ -104,7 +104,7 @@ define service{
         use                             generic-service
         host_name                       remotehost
         service_description             Asterisk
-	check_command			check_nrpe!check_asterisk -a "-U sip:monitor@127.0.0.1 -P 5060 -w 500 -c 1000"
+	check_command			check_sip!"sip:100@41.191.245.66"!5060
         }
 ;Diagonostic
 define service{
